// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransferConfirmationCard renders correctly for faucet drilldown 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "flexGrow": 1,
    }
  }
>
  <View>
    <RNCSafeAreaView
      style={
        Object {
          "flexGrow": 1,
          "padding": 16,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginVertical": 5,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginRight": 5,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
              ]
            }
          >
            total
          </Text>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 16,
                "lineHeight": 22,
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                undefined,
                Object {
                  "color": undefined,
                },
              ]
            }
          >
            
            $
            133.00
          </Text>
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginVertical": 5,
            },
            Object {
              "marginVertical": 0,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginRight": 5,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
                Object {
                  "color": "#9CA4A9",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 14,
                  "lineHeight": 18,
                },
              ]
            }
          >
            Celo Dollars @
             
            <Text
              numberOfLines={1}
              style={
                Array [
                  undefined,
                  Object {
                    "color": undefined,
                  },
                ]
              }
            >
              
              $
              0.75
            </Text>
          </Text>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "#9CA4A9",
                "fontFamily": "Inter-Regular",
                "fontSize": 14,
                "lineHeight": 18,
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                undefined,
                Object {
                  "color": undefined,
                },
              ]
            }
          >
            
            100.00
          </Text>
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#9CA4A9",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
            "marginTop": "auto",
            "textAlign": "center",
          }
        }
      >
        receiveFlow8:receivedAmountFromCelo
      </Text>
    </RNCSafeAreaView>
  </View>
</RCTScrollView>
`;

exports[`TransferConfirmationCard renders correctly for received escrow transaction drilldown 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "flexGrow": 1,
    }
  }
>
  <View>
    <RNCSafeAreaView
      style={
        Object {
          "flexGrow": 1,
          "padding": 16,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "marginRight": 8,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#B4B9BD",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 13,
                  "lineHeight": 16,
                  "marginBottom": 4,
                }
              }
            >
              receivedFrom
            </Text>
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                      "marginRight": 7,
                    }
                  }
                >
                  +1 415-555-0000
                </Text>
                <View
                  style={
                    Object {
                      "transform": Array [
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                    }
                  }
                >
                  <svg
                    fill="none"
                    height={16}
                    viewBox="0 0 16 16"
                    width={16}
                  >
                    <path
                      d="M3 6l5 5 5-5"
                      stroke="#B4B9BD"
                    />
                  </svg>
                </View>
              </View>
              <Text
                style={
                  Object {
                    "color": "#9CA4A9",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 14,
                    "lineHeight": 18,
                    "marginRight": 7,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              Object {
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  false,
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Object {
                        "backgroundColor": "#7AD6FE",
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../packages/react-components/images/unknown-user-icon.png",
                      }
                    }
                    style={
                      Array [
                        Object {
                          "alignSelf": "center",
                          "margin": "auto",
                        },
                        Object {
                          "height": 40,
                          "width": 40,
                        },
                      ]
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "white",
                      "borderRadius": 12,
                      "elevation": 3,
                      "height": 24,
                      "justifyContent": "center",
                      "shadowColor": "black",
                      "shadowOffset": Object {
                        "height": 1.5,
                        "width": 0,
                      },
                      "shadowOpacity": 0.3,
                      "shadowRadius": 2.4000000000000004,
                      "width": 24,
                    },
                    Object {
                      "marginHorizontal": -8,
                      "zIndex": 1,
                    },
                  ]
                }
              >
                <svg
                  fill="none"
                  height={9}
                  viewBox="0 0 13 9"
                  width={13}
                >
                  <path
                    d="M1 4.5h11m0 0L8.264 1M12 4.5L8.264 8"
                    stroke="#2E3338"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={1.5}
                  />
                </svg>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Object {
                        "backgroundColor": "#7AD6FE",
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontFamily": "Inter-Medium",
                          "fontSize": 16,
                        },
                        Object {
                          "fontSize": 20,
                        },
                      ]
                    }
                  >
                    J
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "borderStyle": "solid",
            "borderTopColor": "#EEEEEE",
            "borderTopWidth": 1,
            "marginBottom": 15,
            "marginTop": 10,
            "width": "100%",
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginVertical": 5,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginRight": 5,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
              ]
            }
          >
            total
          </Text>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 16,
                "lineHeight": 22,
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                undefined,
                Object {
                  "color": undefined,
                },
              ]
            }
          >
            
            $
            133.00
          </Text>
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginVertical": 5,
            },
            Object {
              "marginVertical": 0,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginRight": 5,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
                Object {
                  "color": "#9CA4A9",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 14,
                  "lineHeight": 18,
                },
              ]
            }
          >
            Celo Dollars @
             
            <Text
              numberOfLines={1}
              style={
                Array [
                  undefined,
                  Object {
                    "color": undefined,
                  },
                ]
              }
            >
              
              $
              0.75
            </Text>
          </Text>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "#9CA4A9",
                "fontFamily": "Inter-Regular",
                "fontSize": 14,
                "lineHeight": 18,
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                undefined,
                Object {
                  "color": undefined,
                },
              ]
            }
          >
            
            100.00
          </Text>
        </Text>
      </View>
    </RNCSafeAreaView>
  </View>
</RCTScrollView>
`;

exports[`TransferConfirmationCard renders correctly for received transaction drilldown 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "flexGrow": 1,
    }
  }
>
  <View>
    <RNCSafeAreaView
      style={
        Object {
          "flexGrow": 1,
          "padding": 16,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "marginRight": 8,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#B4B9BD",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 13,
                  "lineHeight": 16,
                  "marginBottom": 4,
                }
              }
            >
              receivedFrom
            </Text>
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                      "marginRight": 7,
                    }
                  }
                >
                  +1 415-555-0000
                </Text>
                <View
                  style={
                    Object {
                      "transform": Array [
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                    }
                  }
                >
                  <svg
                    fill="none"
                    height={16}
                    viewBox="0 0 16 16"
                    width={16}
                  >
                    <path
                      d="M3 6l5 5 5-5"
                      stroke="#B4B9BD"
                    />
                  </svg>
                </View>
              </View>
              <Text
                style={
                  Object {
                    "color": "#9CA4A9",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 14,
                    "lineHeight": 18,
                    "marginRight": 7,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              Object {
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  false,
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Object {
                        "backgroundColor": "#7AD6FE",
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../packages/react-components/images/unknown-user-icon.png",
                      }
                    }
                    style={
                      Array [
                        Object {
                          "alignSelf": "center",
                          "margin": "auto",
                        },
                        Object {
                          "height": 40,
                          "width": 40,
                        },
                      ]
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "white",
                      "borderRadius": 12,
                      "elevation": 3,
                      "height": 24,
                      "justifyContent": "center",
                      "shadowColor": "black",
                      "shadowOffset": Object {
                        "height": 1.5,
                        "width": 0,
                      },
                      "shadowOpacity": 0.3,
                      "shadowRadius": 2.4000000000000004,
                      "width": 24,
                    },
                    Object {
                      "marginHorizontal": -8,
                      "zIndex": 1,
                    },
                  ]
                }
              >
                <svg
                  fill="none"
                  height={9}
                  viewBox="0 0 13 9"
                  width={13}
                >
                  <path
                    d="M1 4.5h11m0 0L8.264 1M12 4.5L8.264 8"
                    stroke="#2E3338"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={1.5}
                  />
                </svg>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Object {
                        "backgroundColor": "#7AD6FE",
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontFamily": "Inter-Medium",
                          "fontSize": 16,
                        },
                        Object {
                          "fontSize": 20,
                        },
                      ]
                    }
                  >
                    J
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "borderStyle": "solid",
            "borderTopColor": "#EEEEEE",
            "borderTopWidth": 1,
            "marginBottom": 15,
            "marginTop": 10,
            "width": "100%",
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginVertical": 5,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginRight": 5,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
              ]
            }
          >
            total
          </Text>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 16,
                "lineHeight": 22,
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                undefined,
                Object {
                  "color": undefined,
                },
              ]
            }
          >
            
            $
            133.00
          </Text>
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginVertical": 5,
            },
            Object {
              "marginVertical": 0,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginRight": 5,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
                Object {
                  "color": "#9CA4A9",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 14,
                  "lineHeight": 18,
                },
              ]
            }
          >
            Celo Dollars @
             
            <Text
              numberOfLines={1}
              style={
                Array [
                  undefined,
                  Object {
                    "color": undefined,
                  },
                ]
              }
            >
              
              $
              0.75
            </Text>
          </Text>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "#9CA4A9",
                "fontFamily": "Inter-Regular",
                "fontSize": 14,
                "lineHeight": 18,
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                undefined,
                Object {
                  "color": undefined,
                },
              ]
            }
          >
            
            100.00
          </Text>
        </Text>
      </View>
    </RNCSafeAreaView>
  </View>
</RCTScrollView>
`;

exports[`TransferConfirmationCard renders correctly for sent escrow transaction drilldown 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "flexGrow": 1,
    }
  }
>
  <View>
    <RNCSafeAreaView
      style={
        Object {
          "flexGrow": 1,
          "padding": 16,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "marginRight": 8,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#B4B9BD",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 13,
                  "lineHeight": 16,
                  "marginBottom": 4,
                }
              }
            >
              sentTo
            </Text>
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                      "marginRight": 7,
                    }
                  }
                >
                  +1 415-555-0000
                </Text>
                <View
                  style={
                    Object {
                      "transform": Array [
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                    }
                  }
                >
                  <svg
                    fill="none"
                    height={16}
                    viewBox="0 0 16 16"
                    width={16}
                  >
                    <path
                      d="M3 6l5 5 5-5"
                      stroke="#B4B9BD"
                    />
                  </svg>
                </View>
              </View>
              <Text
                style={
                  Object {
                    "color": "#9CA4A9",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 14,
                    "lineHeight": 18,
                    "marginRight": 7,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              Object {
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  Object {
                    "flexDirection": "row-reverse",
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Object {
                        "backgroundColor": "#7AD6FE",
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../packages/react-components/images/unknown-user-icon.png",
                      }
                    }
                    style={
                      Array [
                        Object {
                          "alignSelf": "center",
                          "margin": "auto",
                        },
                        Object {
                          "height": 40,
                          "width": 40,
                        },
                      ]
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "white",
                      "borderRadius": 12,
                      "elevation": 3,
                      "height": 24,
                      "justifyContent": "center",
                      "shadowColor": "black",
                      "shadowOffset": Object {
                        "height": 1.5,
                        "width": 0,
                      },
                      "shadowOpacity": 0.3,
                      "shadowRadius": 2.4000000000000004,
                      "width": 24,
                    },
                    Object {
                      "marginHorizontal": -8,
                      "zIndex": 1,
                    },
                  ]
                }
              >
                <svg
                  fill="none"
                  height={9}
                  viewBox="0 0 13 9"
                  width={13}
                >
                  <path
                    d="M1 4.5h11m0 0L8.264 1M12 4.5L8.264 8"
                    stroke="#2E3338"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={1.5}
                  />
                </svg>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Object {
                        "backgroundColor": "#7AD6FE",
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontFamily": "Inter-Medium",
                          "fontSize": 16,
                        },
                        Object {
                          "fontSize": 20,
                        },
                      ]
                    }
                  >
                    J
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "borderStyle": "solid",
              "borderTopColor": "#EEEEEE",
              "borderTopWidth": 1,
              "marginBottom": 15,
              "marginTop": 10,
              "width": "100%",
            }
          }
        />
        <Text
          style={
            Object {
              "color": "#B4B9BD",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 13,
              "lineHeight": 16,
              "marginBottom": 4,
            }
          }
        >
          commentLabel
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          Rent request for June, it is already late!!!
        </Text>
      </View>
      <View
        style={
          Object {
            "borderStyle": "solid",
            "borderTopColor": "#EEEEEE",
            "borderTopWidth": 1,
            "marginBottom": 15,
            "marginTop": 10,
            "width": "100%",
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginVertical": 5,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginRight": 5,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
                undefined,
              ]
            }
          >
            amountSent
          </Text>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              undefined,
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                undefined,
                Object {
                  "color": undefined,
                },
              ]
            }
          >
            $
            133.00
          </Text>
        </Text>
      </View>
      <View>
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                feeActual
              </Text>
              <View
                style={
                  Object {
                    "transform": Array [
                      Object {
                        "rotate": "0deg",
                      },
                    ],
                  }
                }
              >
                <svg
                  fill="none"
                  height={16}
                  viewBox="0 0 16 16"
                  width={16}
                >
                  <path
                    d="M3 6l5 5 5-5"
                    stroke="#B4B9BD"
                  />
                </svg>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginVertical": 5,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "marginRight": 5,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 16,
                        "lineHeight": 22,
                      },
                      undefined,
                    ]
                  }
                >
                  
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      undefined,
                      Object {
                        "color": undefined,
                      },
                    ]
                  }
                >
                  
                  $
                  0
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginVertical": 5,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginRight": 5,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
              ]
            }
          >
            total
          </Text>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 16,
                "lineHeight": 22,
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                undefined,
                Object {
                  "color": undefined,
                },
              ]
            }
          >
            $
            133.00
          </Text>
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginVertical": 5,
            },
            Object {
              "marginVertical": 0,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginRight": 5,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
                Object {
                  "color": "#9CA4A9",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 14,
                  "lineHeight": 18,
                },
              ]
            }
          >
            Celo Dollars @
             
            <Text
              numberOfLines={1}
              style={
                Array [
                  undefined,
                  Object {
                    "color": undefined,
                  },
                ]
              }
            >
              
              $
              0.75
            </Text>
          </Text>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "#9CA4A9",
                "fontFamily": "Inter-Regular",
                "fontSize": 14,
                "lineHeight": 18,
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                undefined,
                Object {
                  "color": undefined,
                },
              ]
            }
          >
            100.00
          </Text>
        </Text>
      </View>
    </RNCSafeAreaView>
  </View>
</RCTScrollView>
`;

exports[`TransferConfirmationCard renders correctly for sent transaction drilldown 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "flexGrow": 1,
    }
  }
>
  <View>
    <RNCSafeAreaView
      style={
        Object {
          "flexGrow": 1,
          "padding": 16,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
                "marginRight": 8,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#B4B9BD",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 13,
                  "lineHeight": 16,
                  "marginBottom": 4,
                }
              }
            >
              sentTo
            </Text>
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                      "marginRight": 7,
                    }
                  }
                >
                  +1 415-555-0000
                </Text>
                <View
                  style={
                    Object {
                      "transform": Array [
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                    }
                  }
                >
                  <svg
                    fill="none"
                    height={16}
                    viewBox="0 0 16 16"
                    width={16}
                  >
                    <path
                      d="M3 6l5 5 5-5"
                      stroke="#B4B9BD"
                    />
                  </svg>
                </View>
              </View>
              <Text
                style={
                  Object {
                    "color": "#9CA4A9",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 14,
                    "lineHeight": 18,
                    "marginRight": 7,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              Object {
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  Object {
                    "flexDirection": "row-reverse",
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Object {
                        "backgroundColor": "#7AD6FE",
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../packages/react-components/images/unknown-user-icon.png",
                      }
                    }
                    style={
                      Array [
                        Object {
                          "alignSelf": "center",
                          "margin": "auto",
                        },
                        Object {
                          "height": 40,
                          "width": 40,
                        },
                      ]
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "white",
                      "borderRadius": 12,
                      "elevation": 3,
                      "height": 24,
                      "justifyContent": "center",
                      "shadowColor": "black",
                      "shadowOffset": Object {
                        "height": 1.5,
                        "width": 0,
                      },
                      "shadowOpacity": 0.3,
                      "shadowRadius": 2.4000000000000004,
                      "width": 24,
                    },
                    Object {
                      "marginHorizontal": -8,
                      "zIndex": 1,
                    },
                  ]
                }
              >
                <svg
                  fill="none"
                  height={9}
                  viewBox="0 0 13 9"
                  width={13}
                >
                  <path
                    d="M1 4.5h11m0 0L8.264 1M12 4.5L8.264 8"
                    stroke="#2E3338"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth={1.5}
                  />
                </svg>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Object {
                        "backgroundColor": "#7AD6FE",
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontFamily": "Inter-Medium",
                          "fontSize": 16,
                        },
                        Object {
                          "fontSize": 20,
                        },
                      ]
                    }
                  >
                    J
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "borderStyle": "solid",
              "borderTopColor": "#EEEEEE",
              "borderTopWidth": 1,
              "marginBottom": 15,
              "marginTop": 10,
              "width": "100%",
            }
          }
        />
        <Text
          style={
            Object {
              "color": "#B4B9BD",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 13,
              "lineHeight": 16,
              "marginBottom": 4,
            }
          }
        >
          commentLabel
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          Rent request for June, it is already late!!!
        </Text>
      </View>
      <View
        style={
          Object {
            "borderStyle": "solid",
            "borderTopColor": "#EEEEEE",
            "borderTopWidth": 1,
            "marginBottom": 15,
            "marginTop": 10,
            "width": "100%",
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginVertical": 5,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginRight": 5,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
                undefined,
              ]
            }
          >
            amountSent
          </Text>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              undefined,
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                undefined,
                Object {
                  "color": undefined,
                },
              ]
            }
          >
            $
            133.00
          </Text>
        </Text>
      </View>
      <View>
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackground",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                feeActual
              </Text>
              <View
                style={
                  Object {
                    "transform": Array [
                      Object {
                        "rotate": "0deg",
                      },
                    ],
                  }
                }
              >
                <svg
                  fill="none"
                  height={16}
                  viewBox="0 0 16 16"
                  width={16}
                >
                  <path
                    d="M3 6l5 5 5-5"
                    stroke="#B4B9BD"
                  />
                </svg>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginVertical": 5,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "marginRight": 5,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 16,
                        "lineHeight": 22,
                      },
                      undefined,
                    ]
                  }
                >
                  
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "lineHeight": 22,
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      undefined,
                      Object {
                        "color": undefined,
                      },
                    ]
                  }
                >
                  
                  $
                  0
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginVertical": 5,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginRight": 5,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
              ]
            }
          >
            total
          </Text>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 16,
                "lineHeight": 22,
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                undefined,
                Object {
                  "color": undefined,
                },
              ]
            }
          >
            $
            133.00
          </Text>
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginVertical": 5,
            },
            Object {
              "marginVertical": 0,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginRight": 5,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
                Object {
                  "color": "#9CA4A9",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 14,
                  "lineHeight": 18,
                },
              ]
            }
          >
            Celo Dollars @
             
            <Text
              numberOfLines={1}
              style={
                Array [
                  undefined,
                  Object {
                    "color": undefined,
                  },
                ]
              }
            >
              
              $
              0.75
            </Text>
          </Text>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "#9CA4A9",
                "fontFamily": "Inter-Regular",
                "fontSize": 14,
                "lineHeight": 18,
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                undefined,
                Object {
                  "color": undefined,
                },
              ]
            }
          >
            100.00
          </Text>
        </Text>
      </View>
    </RNCSafeAreaView>
  </View>
</RCTScrollView>
`;

exports[`TransferConfirmationCard renders correctly for verification fee drilldown 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "flexGrow": 1,
    }
  }
>
  <View>
    <RNCSafeAreaView
      style={
        Object {
          "flexGrow": 1,
          "padding": 16,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginVertical": 5,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginRight": 5,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
              ]
            }
          >
            total
          </Text>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 16,
                "lineHeight": 22,
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                undefined,
                Object {
                  "color": undefined,
                },
              ]
            }
          >
            $
            0.39
          </Text>
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginVertical": 5,
            },
            Object {
              "marginVertical": 0,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginRight": 5,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
                Object {
                  "color": "#9CA4A9",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 14,
                  "lineHeight": 18,
                },
              ]
            }
          >
            Celo Dollars @
             
            <Text
              numberOfLines={1}
              style={
                Array [
                  undefined,
                  Object {
                    "color": undefined,
                  },
                ]
              }
            >
              
              $
              0.75
            </Text>
          </Text>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
              Object {
                "color": "#9CA4A9",
                "fontFamily": "Inter-Regular",
                "fontSize": 14,
                "lineHeight": 18,
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                undefined,
                Object {
                  "color": undefined,
                },
              ]
            }
          >
            0.30
          </Text>
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#9CA4A9",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
            "marginTop": "auto",
            "textAlign": "center",
          }
        }
      >
        receiveFlow8:verificationMessage
      </Text>
    </RNCSafeAreaView>
  </View>
</RCTScrollView>
`;
